--- a/Client/WebContent/CSS/Style_Client.css
+++ b/Client/WebContent/CSS/Style_Client.css
@@ -9,7 +9,7 @@
 /*  ΰ  */
 .logo {
    margin-top:2px;
-   background-image: url(../img/EATit.png);
+   background-image: url(https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FQvMBl%2FbtqWU73BhKO%2F5wu0ncSqNIH9pLpQ6A4Pm1%2Fimg.png);
    background-size: cover;
 }
 .logo a{
