--- a/Client/.settings/org.eclipse.wst.common.component
+++ b/Client/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Client">
+    <wb-module deploy-name="EAT-iT">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Client"/>
-        <property name="java-output-path" value="/Client/build/classes"/>
+        <property name="java-output-path" value="/EAT-iT/build/classes"/>
+        <property name="context-root" value="EAT-iT"/>
     </wb-module>
 </project-modules>
