--- a/EAT-iT/WebContent/CSS/main_style.css
+++ b/EAT-iT/WebContent/CSS/main_style.css
@@ -8,21 +8,20 @@
 
 /*  ΰ  */
 .logo {
-	margin-top: 2px;
 	
-	background-image:
-		url(https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FQvMBl%2FbtqWU73BhKO%2F5wu0ncSqNIH9pLpQ6A4Pm1%2Fimg.png);
-	background-size: cover;
-	width: 5%;
+	width:90px;
+	height:60px;
 }
 
-.logo a {
+.logo a {	
 	display: block;
-	width: 100px;
-	height: 60px;
-	cursor: pointer;
+	width: 100%;
+	height: 100%;
 }
-
+.logo a img{
+width:131%;
+height:131%;
+margin-top:-8px;}
 /*  ׸           õ  ޴    */
 .menubar {
 	position: fixed;
